Sun Apr 28 16:21:56 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* include.c (Include_Find): Use PATH_MAX from limits.h instead of
	MAXPATHLEN from sys/param.h or own definition.
	* output.c: Likewise.

Sun Apr 28 14:49:40 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* include.c (Include_Find): Drop inc parameter.
	* include.h (Include_Find): Likewise.
	* directive_file.c (c_incbin): Drop Include_Find inc parameter.
	* filestack.c (FS_PushFilePObject): Likewise.
	* eval.c (Eval_Unop): Likewise.

Tue Apr  2 22:35:47 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	unittests/reloc:
	* src/reloc_against_other_areas.s: Add.
	* ref/reloc_against_other_areas_aof.txt: Add.
	* ref/reloc_against_other_areas_elf.txt: Add.

Tue Apr  2 20:42:27 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* elf.h: Remove.
	* symbol.c: Include libelf.h instead of elf.h.
	* reloc.c: Likewise.
	* reloc.h: Likewise.
	* output.c (armword): Move to output.h
	(ourword): Remove.
	(Output_Open): Add.
	(Output_OpenOutput): Make use of Output_Open.
	(writeElfSH): Remove.
	(Output_ELF): Use ELF Tool Chain library.
	* output.h (armword): Moved from output.c.
	* Makefile.am (asasm_CFLAGS): Add ELF Tool Chain header files.
	(asasm_LDFLAGS): Add -static.
	(asasm_LDADD): Add.
	* configure.ac (AC_USE_SYSTEM_EXTENSIONS, LT_INIT): Add.

	* unittests/reloc/ref/*_elf.txt: Update.

Tue Apr  2 19:48:51 CEST 2013  John Tytgat  <John.Tytgat@aaug.net>

	src:
	* predef_reg.c: Add stdio.h include.
	* reloc.c (Reloc_BuildForAOF, Reloc_BuildForELF): Add.
	(Reloc_RemoveRelocs): Delete Area::relocOutP.
	(Reloc_PrepareRelocOutPart1, Reloc_PrepareRelocOutPart2): Add.
	(Reloc_GetNumberRelocs, Reloc_AOFOutput, Reloc_ELFOutput): Remove.
	(NO_ELF_SUPPORT): Remove test.
	* reloc.h: Likewise.
	(struct RelocOut): Add.
	* main.c (NO_ELF_SUPPORT): Remove.
	* symbol.c (Symbol_BuildStringData, Symbol_BuildSymbolDataForAOF,
	Symbol_BuildSymbolDataForELF): Add.
	(NO_ELF_SUPPORT): Remove.